--- a/index.html
+++ b/index.html
@@ -4,26 +4,39 @@
 
 <html>
 
-  <title>{{ site.title }}</title>
+  <title>Mathison</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="A london based photographer goes by the name of Aimen. Event and street photographer who takes photographs instead of snapshots">
+  <meta name="description" content="">
   <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
 <!--    imports  -->
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <script src="js/functions.js"></script>
+  <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
 
 
 
 
-<body style="margin: 0; background-color: #1B1D22">
+<body style="margin: 0; background-color: #ffffff; color: #262932;
+overflow-x: hidden">
+  {% include alert.html %}
 
+<div class="container">
   {% include main.html %}
-
+  {% include about.html %}
+</div>
+  {% include download.html %}
+<div class="container">
+  {% include updatelog.html %}
+  {% include feedback.html %}
+</div>
+  {% include footer.html %}
 </body>
 
 
